tests/errors/type-constructor.kawa
var A a;

class A {
  method int constructor() { }
}

main {}
